Bug 506233 - Can't save a Krita file after changing a File Layer's name through its properties dialog because it doesn't make the Krita document "dirty"
Summary: Can't save a Krita file after changing a File Layer's name through its proper...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: 5.2.9
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-26 18:26 UTC by Noel Santos
Modified: 2026-02-27 13:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Santos 2025-06-26 18:26:22 UTC
SUMMARY
Changing the layer name of a filter layer through its properties dialog doesn't make the Krita document "dirty."

STEPS TO REPRODUCE
1. Open a Krita file that has a file layer.
2. Open the properties dialog of the file layer.
3. Change the Layer Name to something else.
4. Click OK.

OBSERVED RESULT
Even though the layer name was changed and the change is in the undo history, Krita doesn't show an asterisk in the title, and consequently it's not possible to save the changes with Ctrl+S.

EXPECTED RESULT
An asterisk.

SOFTWARE/OS VERSIONS
I'm on Linux Mint.

ADDITIONAL INFORMATION
The same problem occurs when you open a file that has a file layer that points to a missing file: you get a dialog asking to select a new file, and if you do, Krita doesn't give you an asterisk, which means you can't open a Krita file just to fix the file layer's broken linkage and save it immediately after.

The "Save" menu item in the File menu isn't grayed out while there is no asterisk, but clicking on "Save" doesn't seem to actually save when there is no asterisk.
Comment 1 Halla Rempt 2025-07-08 09:19:21 UTC
Thanks for the report. I can confirm the issue. Weirdly enough, this works fine for a paint layer...
Comment 2 Dmitry Kazakov 2026-02-27 13:52:14 UTC
Git commit 72af5096bbc6aff0bc07040b6a1610c4cd02b763 by Dmitry Kazakov.
Committed on 27/02/2026 at 13:52.
Pushed by dkazakov into branch 'master'.

Fix renaming of File, Filter and Generator Layers to be undoable

These types of layers have their own properties dialogs and
properties undo commands, so we should handle the name
separately.

M  +23   -0    libs/command/kis_command_utils.cpp
M  +37   -0    libs/command/kis_command_utils.h
M  +17   -6    libs/ui/dialogs/kis_dlg_generator_layer.cpp
M  +39   -25   libs/ui/kis_layer_manager.cc

https://invent.kde.org/graphics/krita/-/commit/72af5096bbc6aff0bc07040b6a1610c4cd02b763
Comment 3 Dmitry Kazakov 2026-02-27 13:59:39 UTC
Git commit 408eb3029fde70256c882b2383ce1b8f3be30a64 by Dmitry Kazakov.
Committed on 27/02/2026 at 13:57.
Pushed by dkazakov into branch 'krita/6.0'.

Fix renaming of File, Filter and Generator Layers to be undoable

These types of layers have their own properties dialogs and
properties undo commands, so we should handle the name
separately.

M  +23   -0    libs/command/kis_command_utils.cpp
M  +37   -0    libs/command/kis_command_utils.h
M  +17   -6    libs/ui/dialogs/kis_dlg_generator_layer.cpp
M  +39   -25   libs/ui/kis_layer_manager.cc

https://invent.kde.org/graphics/krita/-/commit/408eb3029fde70256c882b2383ce1b8f3be30a64