Fix renaming of File, Filter and Generator Layers to be undoable

These types of layers have their own properties dialogs and
properties undo commands, so we should handle the name
separately.

BUG:506233